# Switchbot-K10-Barrel-Emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
ansible/: ansible.cfg
ansible/inventories/dev/: hosts.yml
ansible/inventories/dev/group_vars/: rpis.yml
ansible/inventories/dev/host_vars/: rPI1.yml  rPI2.yml
ansible/playbooks/: site.yml
ansible/roles/barrel_emulator/tasks/: main.yml
ansible/roles/barrel_emulator/templates/: config.yml.j2  k10-barrel-emulator.service.j2
ansible/roles/bluetooth/handlers/: main.yml
ansible/roles/bluetooth/tasks/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/common/vars/: main.yml
config/: k10-barrel-emulator.toml
docs/: ARCHITECTURE.md  FEDORA_SERVER_RPI.md
emulator/: run.py
emulator/config/: default.yml
emulator/src/k10_barrel_emulator/: config.py  emulator.py  hexutil.py  main.py
include/k10_barrel/: advertising.h  config.h  daemon.h  dbus.h  dbus_defs.h  gatt.h  log.h
packaging/dbus/: ro.vilt.SwitchbotBleEmulator.conf
packaging/rpm/: k10-barrel-emulator.spec  rpmlint.conf
packaging/systemd/: k10-barrel-emulator.service
scripts/: build_rpm.sh  run_linters.sh
src/ble/: advertising.c  gatt.c
src/cli/: main.c
src/config/: config.c
src/daemon/: daemon.c  main.c
src/dbus/: dbus.c
src/log/: log.c
